[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["nautz"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.59"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'KeyboardEvent',
  'EventListener',
  'console',
]
